@@ -216,6 +216,15 @@
   start compile.
 </p>
 
+<p>
+  Standard objects library now comes with new IPv6 Network
+  objects. These objects represent IPv6 networks that should not be
+  routed on the Internet. Included: RFC3849 "Documentation Network"
+  2001:db8::; RFC4291 "Link local" fe80::/10; RFC4773 "Experimental
+  Network" 2001:0000::/29 to 2001:01F8::/29. Also added a group "ipv6
+  private" that includes all these networks.
+</p>
+
 <a name="cluster"></a>
 <h2>Support for High Availability configurations</h2>
 
